--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="row">
       <div class="col-md-4 me-1">
         <img src="./groco.png" class="img-fluid m-2" style="height: 250px;">
-        <a href="file:///E:/groco-igcp1-first-group-project/index.html">
+        <a href="https://groco987.netlify.app/">
           <button class="m-3 p-1 btn btn-dark ms-5 mx-5 text-center ">view</button>
           
         </a>
@@ -174,7 +174,7 @@
 
       <div class="col-md-4  ">
         <img src="./hub.png" class="img-fluid m-2" style="height: 250px;">
-        <a href="file:///C:/Users/DELL/Desktop/electro-tech-hub-igcp1-group-project-2/index.html">
+        <a href="https://electro-tech-hub.netlify.app/#">
           <button class="m-3 p-1 btn btn-dark ms-5 mx-5 text-center text-center">view</button>
           
         </a>
