--- a/index.html
+++ b/index.html
@@ -31,19 +31,6 @@
       width: 1490px;
       display: flex;
     }
-
-
-
-
-    /* .navbar {
-      color: black;
-      font-size: 25px;
-      display: flex;
-      justify-content: center;
-      background-color:white;
-      padding: 15px;
-    } */
-
     .space {
       margin-left: 50px;
       text-decoration: none;
@@ -53,40 +40,11 @@
     .space:hover {
       color: tomato;
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    @media screen and(min-width=600)and(max-width=778) {}
-  </style>
+    </style>
 </head>
 
 <body>
-
-
-
-
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand ms-5 text-center" href="#">Portfolio</a>
 
@@ -167,15 +125,14 @@
       <div class="col-md-4 me-1">
         <img src="./groco.png" class="img-fluid m-2" style="height: 250px;">
         <a href="https://groco987.netlify.app/">
-          <button class="m-3 p-1 btn btn-dark ms-5 mx-5 text-center ">view</button>
-          
-        </a>
+          <div class="text-center"><button class="m-3 p-1 btn btn-dark ms-5 mx-5  ">view</button></div>
+          </a>
         </div>
 
       <div class="col-md-4  ">
         <img src="./hub.png" class="img-fluid m-2" style="height: 250px;">
-        <a href="https://electro-tech-hub.netlify.app/#">
-          <button class="m-3 p-1 btn btn-dark ms-5 mx-5 text-center text-center">view</button>
+        <a href="https://electro-tech-hub.netlify.app/">
+          <div class="text-center"><button class="m-3 p-1 btn btn-dark ms-5 mx-5 text-center text-center">view</button></div>
           
         </a>
         </div>
@@ -185,8 +142,8 @@
 
     <div id="education" class="row mb-5 flex-wrap-wrap ">
       <div class="col-md-6">
-        <p class=" border border-dark m-5 p-2"><span class="fs-2 text-danger">Education </span> <br />I will currently
-          pursing My graduation for<br /> Bacholer's of Computer Application<br />Mar-Apr-2022-23<br />
+        <p class=" border border-dark m-5 p-2"><span class="fs-2 text-danger text-center">Education <img src="./study.jpg" class="img-fluid m-2" style="height: 150px;"></span> <br />I will currently
+          pursing My graduation for<br /> Bacholer's of Computer Application (BBA(CA))<br />Mar-Apr-2022-23<br />
           collage : Loknete Ramdas Patil Dhumal Asc Collage Rahuri, <br />
           Pune Univercity<br />
 
