--- a/index.html
+++ b/index.html
@@ -203,24 +203,24 @@
 
         <div class="col-lg-6 col-md-6 col-sm-12 my-md-3 my-sm-5">
           <h5 class=" fs-4">Quick Links </h5>
-          <a href="./index" style="text-decoration: none; display:block; color: white;">Home</a>
-          <a href="./about" style="text-decoration: none; display:block; color: white;">About us</a>
-          <a href="./contact" style="text-decoration: none; display:block; color: white;">Contact us</a>
-          <a href="./skill" style="text-decoration: none; display:block; color: white;">Skills</a>
-          <a href="./education" style="text-decoration: none; display:block; color: white;">Education</a>
+          <a href="#" style="text-decoration: none; display:block; color: white;">Home</a>
+          <a href="#" style="text-decoration: none; display:block; color: white;">About us</a>
+          <a href="#" style="text-decoration: none; display:block; color: white;">Contact us</a>
+          <a href="" style="text-decoration: none; display:block; color: white;">Skills</a>
+          <a href="#" style="text-decoration: none; display:block; color: white;">Education</a>
 
         </div>
 
         <div class="col-lg-6 col-md-6 col-sm-12 my-md-3 my-sm-3">
           <h5 class=" fs-4">Contact Us</h5>
-          <pre><a href="tel:+919373814613" style="text-decoration: none; display:block; color: white;"><i class="fa-solid fa-phone-volume"></i> +918262945593</a></pre>
+          <pre><a href="tel:+918262945593" style="text-decoration: none; display:block; color: white;"><i class="fa-solid fa-phone-volume"></i> +918262945593</a></pre>
           <a href="mailto:prajaktamhase8@gmail.com" style="text-decoration: none; display:block; color: white;"><i
               class="fa-solid fa-envelope"></i>
             prajaktamhase8@gmail.com</a>
           <br>
           <!-- <input type="tel"> -->
           <span>Click to know our team</span><br>
-          <a href="./pages/aboutus.html" style="text-decoration: none; display:block; color: white;">About Us</a>
+          <a href="" style="text-decoration: none; display:block; color: white;">About Us</a>
         </div>
       </div>
       <div>
