--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
 <body>
 
     <embed class="pdf"
-    src="./CV_2023042620240122 (1).pdf"
+    src="./LinkedIn (25).pdf"
     type="application/pdf"
     height="800px"
     width="100%"
