--- a/index.html
+++ b/index.html
@@ -13,36 +13,42 @@
       margin: 0%;
       padding: 0%;
     }
+
     .img {
       border-radius: 50%;
       margin-left: 40px;
       margin-top: 50px;
       box-shadow: 0 0 5px 5px #efc77c;
     }
+
     .img:hover {
       box-shadow: 0 0 5px 5px white;
     }
+
     .main-contain {
       border-radius: 5px;
       height: 600px;
       width: 1490px;
       display: flex;
     }
+
     .space {
       margin-left: 50px;
       text-decoration: none;
       color: black;
     }
+
     .space:hover {
       color: tomato;
     }
   </style>
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand ms-5 text-center" href="#">Portfolio</a>
-       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -65,13 +71,13 @@
           </li>
         </ul>
       </div>
-        <form class="d-flex" role="search">
+      <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
-    </nav>
-    <div class="container">
+  </nav>
+  <div class="container">
     <div class="row">
       <div class="col-md-4">
         <img src="./pm.jpg" height="270px" class="img" />
@@ -116,13 +122,13 @@
             helped me grasp HTML and CSS concepts really well. Now, I'm not just capable of creating websites, but I can
             also ensure they look awesome on any type of device, which is quite impressive!
           </p>
-             <a href="https://github.com/prajktamhase/groco-igcp1-first-group-project" class="text-decoration-none">
+          <a href="https://github.com/prajktamhase/groco-igcp1-first-group-project" class="text-decoration-none">
             <button class="m-3 p-1 btn btn-dark ms-5 mx-5">Source Code</button>
-             </a>
-        <a href="https://groco987.netlify.app/" class="text-decoration-none">
+          </a>
+          <a href="https://groco987.netlify.app/" class="text-decoration-none">
             <button class="m-3 p-1 btn btn-dark ms-5 mx-5">Live Demo </button>
-            </a>
-          </div>
+          </a>
+        </div>
       </div>
       <div class="card col-md-5 m-5 p-4">
         <img src="./hub.png" class="img-fluid m-2" style="height: 230px;">
@@ -142,6 +148,58 @@
           </a>
 
           <a href="https://electro-tech-hub.netlify.app/" class="text-decoration-none">
+            <button class="m-3 p-1 btn btn-dark ms-5 mx-5">Live Demo </button>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="card col-md-5 m-5 p-4">
+        <img src="./Screenshot (289).png" class="img-fluid m-2" style="height: 230px;">
+        <div class="card-body">
+          <h5 class="card-title text-center">Expense Tracker</h5>
+          <p class="card-text">Hello everyone! 👋🏻 I have develop a project using MERN
+            Stack .The perform a CRUD operations. Implemented a secure RESTful APIs with Express and Node.
+            js to store and retrieve
+            user-specific expenses in MongoDB. In this project designed to be user-friendly, and focusing on simplicity
+            .
+            Enabled users to view and manage only their own expenses.
+          </p>
+
+          <a href="https://github.com/prajktamhase/expense-tracker" class="text-decoration-none">
+            <button class="m-3 p-1 btn btn-dark ms-5 mx-5">Source Code</button>
+
+          </a>
+
+          <a href="https://expense-tracker-7wfe.onrender.com/" class="text-decoration-none">
+            <button class="m-3 p-1 btn btn-dark ms-5 mx-5">Live Demo </button>
+          </a>
+        </div>
+      </div>
+
+      <div class="card col-md-5 m-5 p-4">
+        <img src="./Screenshot (280).png" class="img-fluid m-2" style="height: 230px;">
+        <div class="card-body">
+          <h5 class="card-title text-center">Quick Links</h5>
+          <p class="card-text">Hello everyone! 👋🏻I have develop a project using MERN Stack .Implemented a secure
+            RESTful
+            APIs with Express and Node.js to store and retrieve
+            user-specific expenses in MongoDB.Use of url shortner user can easily long link is converted into short link
+            or
+            url.Hense
+            user can easily understand the link.It is mostly use in client metting in company,teacher meeting
+          </p>
+
+          <a href="https://github.com/prajktamhase/quick-links" class="text-decoration-none">
+            <button class="m-3 p-1 btn btn-dark ms-5 mx-5">Source Code</button>
+
+          </a>
+
+          <a href="https://quicklinks-e7tv.onrender.com/" class="text-decoration-none">
             <button class="m-3 p-1 btn btn-dark ms-5 mx-5">Live Demo </button>
           </a>
         </div>
@@ -199,8 +257,7 @@
 
   <footer class="bg-dark mt-5">
     <div class="container text-light">
-      <div class="row">
-
+      <div class="row">      
         <div class="col-lg-6 col-md-6 col-sm-12 my-md-3 my-sm-5">
           <h5 class=" fs-4">Quick Links </h5>
           <a href="#" style="text-decoration: none; display:block; color: white;">Home</a>
